# HalAPI

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md
tests/: CMakeLists.txt  sl_settings.json
tests/src/: UnitTest.hpp  main.cpp
